@@ -1,14 +1,14 @@
 Package: GSEABase
 Type: Package
 Title: Gene set enrichment data structures and methods
-Version: 1.1.27
+Version: 1.1.28
 Author: Martin Morgan, Seth Falcon, Robert Gentleman
 Maintainer: Biocore Team c/o BioC user list <bioconductor@stat.math.ethz.ch>
 Description: This package provides classes and methods to support
              Gene Set Enrichment Analysis (GSEA).
 License: Artistic-2.0
 Depends: R (>= 2.6.0), methods, AnnotationDbi, Biobase, annotate
-Suggests: Ruuid, hgu95av2.db, GO.db
+Suggests: Ruuid, hgu95av2.db, GO.db, org.Hs.eg.db
 Imports: methods, XML, graph
 LazyLoad: yes
 biocViews: Infrastructure, Statistics
